--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Sezione Contatti -->
     <section class="container text-center my-5">
         <h2>Contattami</h2>
-        <p>Hai bisogno di maggiori informazioni? <a href="mailto:vittorio.mistretta@gmail.com">Scrivimi</a></p>
+        <p>Hai bisogno di maggiori informazioni? <a href="https://vittoriomistretta.github.io/sendmeanemail/">Scrivimi</a></p>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
