--- a/index.html
+++ b/index.html
@@ -48,9 +48,22 @@
     <!-- Sezione Contatti -->
     <section class="container text-center my-5">
         <h2>Contattami</h2>
-        <p>Hai bisogno di maggiori informazioni? <a href="https://vittoriomistretta.github.io/sendmeanemail/">Scrivimi</a></p>
+        <p>Hai bisogno di maggiori informazioni?
+            <span id="email"></span> <!-- Lo span dove verrà inserito l'email -->
+        </p>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+   // Crea l'email offuscata con "at" invece di "@"
+   var emailUser = "vittorio.mistretta";
+   var emailDomain = "gmail.com";
+   
+   // Inserisce l'email corretta e attiva il link mailto
+   document.getElementById("email").innerHTML = 
+       '<a href="mailto:' + emailUser + '@' + emailDomain + '">Scrivimi</a>';
+</script>
+
 </body>
 </html>
